fix: centralize preview/GL child JVM command; surface macOS probe cause
The macOS GL-probe exit-1 diagnosis was invisible in hosted CI: the parent
classified a non-zero exit with a head-bounded 400-char stderr view, which
contained only JDK sun.misc.Unsafe warnings; the child's
'preview-child: failure <glfw error>' line lands at the tail. The production
preview launcher (IntelliJ plugin) also lacked the macOS-only
-XstartOnFirstThread option entirely, so plugin-launched preview children
would hit 'GLFW may only be used on the main thread' on macOS.

Centralize platform command construction in PreviewJvmCommand (single shared
Java source compiled by both the preview module at Java 25 and the IDEA module
at Java 21; the IDEA module invokes it via its stable static API because
Kotlin cannot link the Java-25 source). The test/GL-probe child launcher and
the production launcher both build through it, and the Gradle run/installDist
production launch carries the same macOS flag.

- PreviewJvmCommand.build: java <platform-flags> <extra-flags> -cp <cp> <main> <args>,
  with -XstartOnFirstThread on macOS before classpath/main; deterministic
  command-order unit coverage in both modules.
- classifyGlProbe: non-zero exit and missing-marker messages now surface the
  stderr TAIL (child failure line + GLFW error) plus captured length.
- gl-probe child failure line names os.name/os.arch/java.version.
- classifier semantics unchanged: only the exact hosted-Windows no-GL marker
  skips; unknown failures still fail gated tests (never silently skip).

Focused verification: :libgdx-ui-markup-preview:test (PreviewTestProcessTest,
PreviewGlProbeTest) and :libgdx-ui-markup-idea:unitTest
(PreviewProcessLauncherTest) green; one GL screenshot scenario green through
the refactored child launch.